Set usa-input-mask--content font style to normal - This prevents input text from peeking behind usa-input-mask--content

--- a/packages/usa-input-mask/src/styles/_usa-input-mask.scss
+++ b/packages/usa-input-mask/src/styles/_usa-input-mask.scss
@@ -18,6 +18,7 @@
     visibility: hidden;
 
     @media (forced-colors: active) {
+      font-style: normal;
       visibility: visible;
     }
   }
